revisiones de entrega

--- a/Cursos.html
+++ b/Cursos.html
@@ -50,7 +50,7 @@
       <main>
         <h3 id="CursosTitle" class="AprendeMas">Aprende mas</h3>
         <div class="container" style=" display: flex; justify-content: center;">
-          <div id="carousel" class="carousel slide" data-ride="carousel" style="width: 55%; height: 60%;">
+          <div id="carousel" class="carousel slide" data-ride="carousel" style="width: 45%; height: 50%;">
               <ol class="carousel-indicators">
                 <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -87,7 +87,13 @@
               </div>
             </div>
       </div>
+      <div class="CarouselText">
+        <p>Clickea las imagenes para ver la documentacion!</p>
+      </div>
 
+      <div>
+        <h3 class="VideoTitulo">Videos que recomendamos</h3>
+      </div>
       <div class="video__grid">
           <iframe class="video__grid--content" width="560" height="315"  src="https://www.youtube.com/embed/5Uh720poZ8w" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
