nav bar correction

--- a/contacto.html
+++ b/contacto.html
@@ -31,16 +31,16 @@
                     <a class="nav-link" href="./index.html">Inicio</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./Cripto.html">¿Que es Crypto Eye? </a>
+                    <a class="nav-link" href="./cripto.html">¿Que es Crypto Eye? </a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./Monedas.html">Monedas</a>
+                    <a class="nav-link" href="./monedas.html">Monedas</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="./Cursos.html">Cursos</a>
+                    <a class="nav-link" aria-current="page" href="./cursos.html">Cursos</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" tabindex="-1" aria-disabled="true" href="./Contacto.html">Contactanos</a>
+                    <a class="nav-link active" tabindex="-1" aria-disabled="true" href="./contacto.html">Contactanos</a>
                   </li>
                 </ul>
               </div>
