--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
                     <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./Cripto.html">¿Que es Crypto Eye? </a>
+                    <a class="nav-link" href="./cripto.html">¿Que es Crypto Eye? </a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./Monedas.html">Monedas</a>
+                    <a class="nav-link" href="./monedas.html">Monedas</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./Cursos.html">Cursos</a>
+                    <a class="nav-link" href="./cursos.html">Cursos</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./Contacto.html" tabindex="-1" aria-disabled="true">Contactanos</a>
+                    <a class="nav-link" href="./contacto.html" tabindex="-1" aria-disabled="true">Contactanos</a>
                   </li>
                 </ul>
               </div>
