--- a/404.html
+++ b/404.html
@@ -4,22 +4,20 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Page 404 not Found">
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 
-    <!-- Custom CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
-    <!-- favicon -->
-    <link rel="shortcut icon" href="/img/logowhite.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/img/logowhite.svg" type="image/x-icon">
 
     <title>CryptoEye - 404</title>
+
   </head>
   <body class="container">
       <header>
         <nav class="navbar navbar-expand-lg navbar-dark transparent-back">
             <div class="container-fluid">
               <a class="navbar-brand" href="./index.html">
-              <img src="./img/logowhite.png" alt="Logo de CryptoEye">
+              <img src="./img/logowhite.svg" alt="Logo de CryptoEye">
               </a>
       </header>
       <main>
@@ -35,27 +33,25 @@
 <footer>
 
   <div class="footer__grider">
-    <!--LOGO DE APPLESTORE-->
     <div class="footer__apple">
       <div class="footer__apple--flex">
         <a href="https://www.apple.com/la/app-store/">
-          <img src="./img/applestore.png" alt="AppleStore Logo" height="122.16" width="150">
+          <img src="./img/applestore.svg" alt="AppleStore Logo" height="122.16" width="150">
           </a>          </div>
     </div>
     
-    <!--ICONOS DE REDES SOCIALES--> 
     <div class="footer__redes">
       <div class="footer__redes--flex">
         <a href="https://www.youtube.com/watch?v=hk9NxydtPOU" style="padding-right: 1.5625em;">
-          <img src="./img/youtube.png" alt="Logo de youtube" height="23" width="30.17">
+          <img src="./img/youtube.svg" alt="Logo de youtube" height="23" width="30.17">
       </a>
 
       <a href="https://www.instagram.com/pedroslev/" style="padding-right: 1.5625em;">
-          <img src="./img/instagram.png" alt="Logo de Instagram" height="25.23" width="25">
+          <img src="./img/instagram.svg" alt="Logo de Instagram" height="25.23" width="25">
       </a>
   
       <a href="https://twitter.com/pedroslevv" style="padding-right: 1.5625em;">
-          <img src="./img/twitter.png" alt="Logo de Twitter" height="23.86" width="25">
+          <img src="./img/twitter.svg" alt="Logo de Twitter" height="23.86" width="25">
       </a>
       </div>
     </div>
