--- a/contacto.html
+++ b/contacto.html
@@ -28,16 +28,16 @@
                     <a class="nav-link" href="./index.html">Inicio</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./cripto.html">¿Que es Crypto Eye? </a>
+                    <a class="nav-link" href="./cripto.html">¿Qué es Crypto Eye? </a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="./monedas.html">Monedas</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="./cursos.html">Aprende Mas</a>
+                    <a class="nav-link" aria-current="page" href="./cursos.html">Aprende Más</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" tabindex="-1" aria-disabled="true" href="./contacto.html">Contactanos</a>
+                    <a class="nav-link active" tabindex="-1" aria-disabled="true" href="./contacto.html">Contáctanos</a>
                   </li>
                 </ul>
               </div>
@@ -51,7 +51,7 @@
       $.support.transition = false
       </script>
       <main>
-        <h1 class="form__contactanos">Contactanos</h1>
+        <h1 class="form__contactanos">Contáctanos</h1>
         <div class="form__contacto">
           <form style="color: white;">
               <div class="form-row">
@@ -70,7 +70,7 @@
                   <label for="exampleFormControlSelect1">Tipo de contacto</label>
                   <select class="form-control" id="exampleFormControlSelect1">
                     <option>Soporte</option>
-                    <option>Trabaja con nosotros!</option>
+                    <option>Trabajá con nosotros!</option>
                   </select>
                 </div>
               <div class="form-group">
