--- a/cripto.html
+++ b/cripto.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="/img/logowhite.svg" type="image/x-icon">
 
-    <title>CryptoEye - Que es</title>
+    <title>CryptoEye - Qué es</title>
 
   </head>
   <body class="container">
@@ -29,16 +29,16 @@
                     <a class="nav-link" href="./index.html">Inicio</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="./cripto.html">¿Que es Crypto Eye? </a>
+                    <a class="nav-link active" aria-current="page" href="./cripto.html">¿Qué es Crypto Eye? </a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="./monedas.html">Monedas</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./cursos.html">Aprende Mas</a>
+                    <a class="nav-link" href="./cursos.html">Aprende Más</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./contacto.html" tabindex="-1" aria-disabled="true">Contactanos</a>
+                    <a class="nav-link" href="./contacto.html" tabindex="-1" aria-disabled="true">Contáctanos</a>
                   </li>
                 </ul>
               </div>
@@ -50,16 +50,16 @@
        <div class="container cripto__container">
 
         <div class="cripto__container--flex">
-          <h1 class="">Crypto Eye ¿Que es? </h1>
-        <p class="Spacing">CryptoEye es una aplicacion movil que tiene
-            como objetivo monitorear cada moneda del mercado crypto con el proposito de realizar calculos estadisticos  y poder indicar el momento mas conveniente 
-            para comprar y vender. Esto es unicamente posible gracias a nuestro fino algoritmo desarrollado en conjunto con los mejores inversores del mercado crypto
+          <h1 class="">Crypto Eye ¿Qué es? </h1>
+        <p class="Spacing">CryptoEye es una aplicación móvil que tiene
+            como objetivo monitorear cada moneda del mercado crypto con el propósito de realizar cálculos estadísticos  y poder indicar el momento mas conveniente 
+            para comprar y vender. Esto es únicamente posible gracias a nuestro fino algoritmo desarrollado en conjunto con los mejores inversores del mercado crypto
         </p>
         </div>
 
-          <h1 class="">¿Como la instalo? </h1>
+          <h1 class="">¿Cómo la instalo? </h1>
             <ol class="Spacing">
-                <li>Abrir AppStore o clickear en el boton al final de la pagina</li>
+                <li>Abrir AppStore o clickear en el botón al final de la pagina</li>
                 <li>Buscar Crypto Eye</li>
                 <li>Descargar</li>
                 <li>Listo para ganar plata!</li>
