--- a/cursos.html
+++ b/cursos.html
@@ -29,16 +29,16 @@
                     <a class="nav-link" href="./index.html">Inicio</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./cripto.html">¿Que es Crypto Eye? </a>
+                    <a class="nav-link" href="./cripto.html">¿Qué es Crypto Eye? </a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="./monedas.html">Monedas</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="./cursos.html">Aprende Mas</a>
+                    <a class="nav-link active" aria-current="page" href="./cursos.html">Aprende Más</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" tabindex="-1" aria-disabled="true" href="./contacto.html">Contactanos</a>
+                    <a class="nav-link" tabindex="-1" aria-disabled="true" href="./contacto.html">Contáctanos</a>
                   </li>
                 </ul>
               </div>
@@ -46,7 +46,7 @@
           </nav>
       </header>
       <main>
-        <h1 id="CursosTitle" class="AprendeMas">Documentacion oficial:</h1>
+        <h1 id="CursosTitle" class="AprendeMas">Documentación oficial:</h1>
         <div class="container" style=" display: flex; justify-content: center;">
           <div id="carousel" class="carousel slide" data-ride="carousel" style="width: 45%; height: 50%;">
               <ol class="carousel-indicators">
@@ -61,7 +61,7 @@
                     </a>
                   <div class="carousel-caption d-none d-md-block">
                       <h5>Bitcoin</h5>
-                      <p>Introduccion</p>
+                      <p>Introducción</p>
                     </div>
                 </div>
                 <div class="carousel-item">
@@ -70,7 +70,7 @@
                     </a>
                   <div class="carousel-caption d-none d-md-block">
                       <h5>Ethereum</h5>
-                      <p>Introduccion</p>
+                      <p>Introducción</p>
                     </div>
                 </div>
                 <div class="carousel-item">
@@ -79,18 +79,26 @@
                   </a>
                   <div class="carousel-caption d-none d-md-block">
                       <h5>Cardano</h5>
-                      <p>Introduccion</p>
+                      <p>Introducción</p>
                     </div>
                 </div>
+                <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only CarouselFlow">Anterior</span>
+                </a>
+                <a class="carousel-control-next" href="#carousel" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only CarouselFlow" style="color: white;">Siguiente</span>
+                </a>
               </div>
             </div>
       </div>
       <div class="CarouselText">
-        <p>Clickea las imagenes para ver la documentacion!</p>
+        <p>Clickea las imagenes para ver la documentación!</p>
       </div>
 
       <div>
-        <h3 class="VideoTitulo">Lo basico de las monedas lideres!</h3>
+        <h3 class="VideoTitulo">Lo básico de las monedas líderes!</h3>
       </div>
       <div class="video__grid">
           <iframe class="video__grid--content" width="560" height="315"  src="https://www.youtube.com/embed/5Uh720poZ8w" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
