--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
                     <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./cripto.html">¿Que es Crypto Eye? </a>
+                    <a class="nav-link" href="./cripto.html">¿Qué es Crypto Eye? </a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="./monedas.html">Monedas</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./cursos.html">Aprende Mas</a>
+                    <a class="nav-link" href="./cursos.html">Aprende Más</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./contacto.html" tabindex="-1" aria-disabled="true">Contactanos</a>
+                    <a class="nav-link" href="./contacto.html" tabindex="-1" aria-disabled="true">Contáctanos</a>
                   </li>
                 </ul>
               </div>
@@ -45,11 +45,11 @@
           </nav>
       </header>
       <main>
-        <div class="container grider">
+        <div class="container grider" style="padding-top: 5em;">
             <div class="columns__text">
               <div class="container">
                 <h1 class="AnimationWriting">Bienvenidos</h1>
-                <p>Nos alegra anunciar la llegada al mercado digital de CryptoEye, la revolucion en monitoreo de criptomonedas</p>
+                <p>Nos alegra anunciar la llegada al mercado digital de CryptoEye, la revolución en monitoreo de criptomonedas</p>
               </div>
             </div>
 
@@ -58,6 +58,10 @@
                 <img src="img/iphone.png" class="columns__phone--img" alt="Imagen de Iphone con CryptoEye">
               </div>
             </div>
+        </div>
+
+        <div class="container IphoneBanner">
+          <img src="./img/banner.png" alt="">
         </div>
 
 
