--- a/monedas.html
+++ b/monedas.html
@@ -29,16 +29,16 @@
                     <a class="nav-link"  href="./index.html">Inicio</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link"  href="./cripto.html">¿Que es Crypto Eye? </a>
+                    <a class="nav-link"  href="./cripto.html">¿Qué es Crypto Eye? </a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link active"  aria-current="page" href="./monedas.html">Monedas</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./cursos.html">Aprende Mas</a>
+                    <a class="nav-link" href="./cursos.html">Aprende Más</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./contacto.html" tabindex="-1" aria-disabled="true">Contactanos</a>
+                    <a class="nav-link" href="./contacto.html" tabindex="-1" aria-disabled="true">Contáctanos</a>
                   </li>
                 </ul>
               </div>
