--- a/404.html
+++ b/404.html
@@ -24,8 +24,8 @@
 
 <div class="container">
     <div class="not__found">
-        <h1>Lo Sentimos, esta pagina no se encuentra disponible</h1>
-        <h5 class="not__found--text" >Por favor haga click <a href="./index.html">AQUI</a> para regresar a la pagina principal</h5>
+        <h1>Lo sentimos, esta página no se encuentra disponible</h1>
+        <h5 class="not__found--text" >Por favor haga click <a href="./index.html">AQUI</a> para regresar a la página principal</h5>
         
     </div>
 </div>
